--- a/apps/medusa/.yalc/@webbers/review-plugin/package.json
+++ b/apps/medusa/.yalc/@webbers/review-plugin/package.json
@@ -31,10 +31,10 @@
     "@medusajs/admin-sdk": "2.5.0",
     "@medusajs/cli": "2.5.0",
     "@medusajs/framework": "2.5.0",
-    "@medusajs/test-utils": "2.5.0",
-    "@medusajs/medusa": "2.5.0",
-    "@medusajs/ui": "4.0.3",
     "@medusajs/icons": "2.5.0",
+    "@medusajs/medusa": "2.5.0",
+    "@medusajs/test-utils": "2.5.0",
+    "@medusajs/ui": "4.0.3",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -46,5 +46,8 @@
   "engines": {
     "node": ">=20"
   },
-  "yalcSig": "99828695aaaad779835a03e658185907"
+  "dependencies": {
+    "sanitize-html": "^2.14.0"
+  },
+  "yalcSig": "550ebac42c8cb17971e79c795980562a"
 }
