--- a/apps/review-plugin/package.json
+++ b/apps/review-plugin/package.json
@@ -31,10 +31,10 @@
     "@medusajs/admin-sdk": "2.5.0",
     "@medusajs/cli": "2.5.0",
     "@medusajs/framework": "2.5.0",
+    "@medusajs/icons": "2.5.0",
     "@medusajs/medusa": "2.5.0",
     "@medusajs/test-utils": "2.5.0",
     "@medusajs/ui": "4.0.4",
-    "@medusajs/icons": "2.5.0",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -58,10 +58,10 @@
     "@medusajs/admin-sdk": "2.5.0",
     "@medusajs/cli": "2.5.0",
     "@medusajs/framework": "2.5.0",
-    "@medusajs/test-utils": "2.5.0",
-    "@medusajs/medusa": "2.5.0",
-    "@medusajs/ui": "4.0.3",
     "@medusajs/icons": "2.5.0",
+    "@medusajs/medusa": "2.5.0",
+    "@medusajs/test-utils": "2.5.0",
+    "@medusajs/ui": "4.0.3",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -72,5 +72,8 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "sanitize-html": "^2.14.0"
   }
 }
