--- a/apps/review-plugin/package.json
+++ b/apps/review-plugin/package.json
@@ -74,6 +74,7 @@
     "node": ">=20"
   },
   "dependencies": {
-    "sanitize-html": "^2.14.0"
+    "sanitize-html": "^2.14.0",
+    "zod": "^3.24.2"
   }
 }
