feat: added admin page for review overview

--- a/apps/medusa/.yalc/@webbers/review-plugin/package.json
+++ b/apps/medusa/.yalc/@webbers/review-plugin/package.json
@@ -40,15 +40,18 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@tanstack/react-query": "^5.66.9",
     "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "react-router-dom": "^7.2.0"
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
+    "@medusajs/js-sdk": "^2.5.1",
     "sanitize-html": "^2.14.0",
     "zod": "^3.24.2"
   },
-  "yalcSig": "04f8205c5623b3733a66ee25d0a491f9"
+  "yalcSig": "fb2f27b131af63addab108fa4f14029c"
 }
