--- a/apps/review-plugin/package.json
+++ b/apps/review-plugin/package.json
@@ -49,10 +49,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
-    "yalc": "^1.0.0-pre.53"
+    "yalc": "^1.0.0-pre.53",
+    "@tanstack/react-query": "5.64.2"
   },
   "peerDependencies": {
     "@medusajs/admin-sdk": "2.5.0",
@@ -68,12 +70,15 @@
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "react-router-dom": "^7.2.0",
+    "@tanstack/react-query": "5.64.2"
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
+    "@medusajs/js-sdk": "^2.5.1",
     "sanitize-html": "^2.14.0",
     "zod": "^3.24.2"
   }
