--- a/apps/medusa/package.json
+++ b/apps/medusa/package.json
@@ -52,7 +52,8 @@
     "yalc": "^1.0.0-pre.53"
   },
   "peerDependencies": {
-    "react-router-dom": "6.20.1"
+    "react-router-dom": "6.20.1",
+    "@tanstack/react-query": "5.64.2"
   },
   "engines": {
     "node": ">=20"
