chore: remove unused review plugin files and update dependencies

--- a/apps/review-plugin/package.json
+++ b/apps/review-plugin/package.json
@@ -49,7 +49,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "6.20.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
@@ -63,7 +63,7 @@
     "@medusajs/icons": "2.5.0",
     "@medusajs/medusa": "2.5.0",
     "@medusajs/test-utils": "2.5.0",
-    "@medusajs/ui": "4.0.3",
+    "@medusajs/ui": "4.0.4",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -71,7 +71,7 @@
     "@mikro-orm/postgresql": "6.4.3",
     "awilix": "^8.0.1",
     "pg": "^8.13.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "6.20.1",
     "@tanstack/react-query": "5.64.2"
   },
   "engines": {
