--- a/apps/medusa/package.json
+++ b/apps/medusa/package.json
@@ -22,19 +22,20 @@
     "setup:env": "cp .env.example .env"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.5.0",
-    "@medusajs/cli": "2.5.0",
-    "@medusajs/framework": "2.5.0",
-    "@medusajs/medusa": "2.5.0",
+    "@medusajs/admin-sdk": "2.5.1",
+    "@medusajs/cli": "2.5.1",
+    "@medusajs/framework": "2.5.1",
+    "@medusajs/medusa": "2.5.1",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@webbers/review-plugin": "file:.yalc/@webbers/review-plugin",
     "awilix": "^8.0.1",
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.5.0",
+    "@medusajs/test-utils": "2.5.1",
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
